<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="Special thanks to:"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/civ_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/civ"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0645AD" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/civ_info" />

        <TextView
            android:id="@+id/bgmail_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bgmail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0645AD" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bgmail_info" />

        <TextView
            android:id="@+id/icon8_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/icons8"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0645AD" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icons8_info" />
    </LinearLayout>
</LinearLayout>